--- a/components/styles/navigation.css
+++ b/components/styles/navigation.css
@@ -1,5 +1,7 @@
 :root{
-    --bg-mav-color: rgb(51, 13, 13);
+    --bg-mav-color: rgba(27, 4, 4, 0.808);
+    --bg-btn: rgb(51, 13, 13);
+
 }
 
 *{
@@ -8,12 +10,15 @@
 
 .navbar{
     background-color: var(--bg-mav-color);
+    width: 100%;
+    position: fixed;
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 15px 5px rgb(151, 204, 81)
 }
 
 .navbar ul{
-    display: flex;
+    display: inline-flex;
     list-style: none;
-    width: 100%;
     height: 100%;
 }
 .navbar ul li{
@@ -23,4 +28,16 @@
 }
 .navbar ul li:hover{
     background-color: rgb(119, 78, 78);
+}
+
+.navbar #logout{
+    background-color: var(--bg-btn);
+    border: 0px;
+    float: right;    
+    padding: 20px 40px;
+    height: 100%;
+    transition: 0.3s ease-in;
+}
+.navbar #logout:hover{
+    background-color: rgb(77, 53, 53);
 }
