--- a/components/styles/users.css
+++ b/components/styles/users.css
@@ -268,4 +268,48 @@
     .modal-body{
         display: block;
     }
+    .card-user-details{
+    display: block !important;
+    }
+
 }
+
+/* UER DETAILS */
+.nav-back{
+    display: flex;
+    overflow: hidden;
+    background-color: #14071a;
+    box-shadow: 0px 0px 7px 3px rgb(84, 102, 60)
+}.nav-back h1{
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px 30px;
+    
+}
+.nav-back button {
+    border: 0;
+    background-color: #312536;
+    padding: 5px 10px;
+    margin-left: 30px;
+}
+
+ /* CARD USER INFO */
+ .card-user-details{
+    width: 70vw;
+    max-height: 75vh;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:1rem;
+    background-color: rgb(33, 33, 33);
+    box-shadow: 0px 0px 5px 2px rgb(91, 98, 82)
+
+ }
+
+ .page-not-found{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+ }
